--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^12.0.1",
+        "sass": "^1.35.1",
+        "sass-loader": "^12.1.0",
         "tailwindcss": "^2.0.2"
     }
 }
