--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=e6f5ab212e94fb6049ee",
+    "/css/app.css": "/css/app.css?id=96effc965e41e6e3f3ef"
 }
