--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.2.1",
+        "@vue/compiler-sfc": "^3.1.2",
         "alpinejs": "^2.7.3",
         "autoprefixer": "^10.1.0",
         "axios": "^0.21",
@@ -21,6 +22,10 @@
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.35.1",
         "sass-loader": "^12.1.0",
-        "tailwindcss": "^2.2.0"
+        "tailwindcss": "^2.2.0",
+        "vue-loader": "^16.2.0"
+    },
+    "dependencies": {
+        "vue": "^3.1.2"
     }
 }
