--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
-        "vue": "^3.1.2"
+        "vue": "^3.1.2",
+        "vuex": "^4.0.2"
     }
 }
