--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
+        "braintree-web-drop-in": "^1.30.1",
         "vue": "^3.1.2",
         "vuex": "^4.0.2"
     }
