--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,8 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=28b8ea8af660c2c6500a",
-<<<<<<< HEAD
+    "/js/app.js": "/js/app.js?id=a60651d1b9730124de4c",
+    "/js/braintree.js": "/js/braintree.js?id=c0f9130960ce6b7342de",
     "/css/app.css": "/css/app.css?id=3524203457749813545e"
-=======
-    "/css/app.css": "/css/app.css?id=22d223821b3277802dc5"
->>>>>>> a97a9864e4c45e6aad237c86cb23b9eadb0a3732
 }
