--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js?id=600b7f314810abcda8b2",
+    "/js/braintree.js": "/js/braintree.js?id=c0f9130960ce6b7342de",
     "/css/app.css": "/css/app.css?id=47a178583539ed56a302"
 }
