--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     },
     "dependencies": {
         "braintree-web-drop-in": "^1.30.1",
+        "chart.js": "^3.4.1",
         "vue": "^3.1.2",
+        "vue-chartjs": "^3.5.1",
         "vuex": "^4.0.2"
     }
 }
